--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="index.js" defer></script>
-    <title>Link Tree</title>
+    <title>Pagina Inicial - Torneio Jogos Eletronicos</title>
 </head>
 <body>
     <h1>Olá seja bem-vindo(a)</h1>
