--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="icone">
         <img src="image.png">
     </div>
-    <a href="https://docs.google.com/forms/d/11muFNw9cL8c5mNXVlVuzegI48DHRrDFxx-aFQPgMB0s/viewform?edit_requested=true" target="_blank"><button><i class="bi bi-question-square"></i> INSCRIÇÃO</button></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQzNWES7O65dx8uU1Vu35i2iUBp8VfSzmkeN6ihOdiSTevzQ/viewform?usp=sf_link" target="_blank"><button><i class="bi bi-question-square"></i> INSCRIÇÃO</button></a>
 
     <a href="https://discord.gg/UejtpY6Uvg" target="_blank"><button><i class="bi bi-discord"></i>  DISCORD</button></a>
     
